--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,91 @@
+/* Paleta: branco (#fff), vinho (#800020), preto (#111) */
+
 body {
-   font-family: Arial, sans-serif;
-   padding: 10px, 10px, 20px, 10px;
+  font-family: 'Georgia', serif;
+  background-color: #fff;
+  color: #111;
+  margin: 0;
+  padding: 0;
 }
 
-.menu{
-    font-size: 15px;
+header {
+  background-color: #b32e2e;
+  color: #fff;
+  padding: 1rem 2rem;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+h1 {
+  font-size: 1.8rem;
+  color: #800020;
+  margin: 0;
+}
+
+nav {
+  margin-top: 0.5rem;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+nav a:hover {
+  color: #800020;
+}
+
+main {
+  padding: 2rem;
+}
+
+h2 {
+  color: #2c030d;
+  margin-bottom: 1rem;
+}
+
+ol {
+  list-style-type: decimal;
+  padding-left: 20px;
+}
+
+ol li {
+  margin: 0.5rem 0;
+  font-size: 1.1rem;
+}
+
+ol li a {
+  color: #111;
+  text-decoration: none;
+}
+
+ol li a:hover {
+  color: #800020;
+}
+
+.texto-destaque {
+  background-color: #fff;
+  padding: 2rem;
+  max-width: 700px;
+  margin: 2rem auto;
+  border-left: 5px solid #800020; /* detalhe sóbrio */
+}
+
+.texto-destaque h2 {
+  color: #800020;
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+  font-family: 'Georgia', serif;
+}
+
+.texto-destaque p {
+  color: #111;
+  font-size: 1rem;
+  line-height: 1.6;
+  font-family: 'Georgia', serif;
 }
