--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ ol li a {
 
 .texto-destaque {
   background-color: #fff;
-  padding: 2rem;
+  padding: 1rem;
   max-width: 700px;
   margin: 2rem auto;
   border-left: 5px solid #800020; 
@@ -114,7 +114,7 @@ footer {
   border-top: 2px solid #800020;
   color: #111;
   text-align: center;
-  padding: 0.0025rem 0.0025rem;
+  padding: 0.25rem 0.25rem;
   margin-top: 2rem;
   font-size: 0.9rem;
   position: fixed;
@@ -143,13 +143,13 @@ footer {
 
 .tabela-vinhos th, 
 .tabela-vinhos td {
-  border: 1px solid #800020;
+  border: 1px solid #b32e2e;
   padding: 8px;
   text-align: left;
 }
 
 .tabela-vinhos th {
-  background-color: #800020;
+  background-color: #b32e2e;
   color: #fff;
 }
 
