animando com mp4

--- a/css/compras.css
+++ b/css/compras.css
@@ -1,5 +1,5 @@
 
-/* setando as configuracoes do body*/
+/* setando só o que é pertinente compras.html e confirma.html*/
 body{
   font-family: 'Calibri', serif;
   background-color: #fff;
@@ -7,13 +7,15 @@ body{
   margin: 0;
   padding: 0;
 }
-
 header {
   background-color: #b32e2e;
   color: #fff;
   padding: 1rem 2rem;
 }
-
+.link-container {
+  text-decoration: none;
+  color: inherit;
+}
 .logo-container {
   text-decoration: none;
   color: inherit;
@@ -40,31 +42,10 @@ nav a {
 }
 
 
-main {
-  padding: 2rem;
-}
-
 h2, h3 {
   color: #2c030d;
   margin-bottom: 1rem;
 }
-
-
-ol {
-  list-style-type: decimal;
-  padding-left: 20px;
-}
-
-ol li {
-  margin: 0.5rem 0;
-  font-size: 1.1rem;
-}
-
-ol li a {
-  color: #111;
-  
-}
-
 
 .texto-destaque {
   background-color: #fff;
@@ -82,31 +63,10 @@ ol li a {
 }
 
 .texto-destaque p {
-  color: #800020;
+  color: #111;
   font-size: 1rem;
   line-height: 1.6;
   font-family: 'Calibri', serif;
-}
-
-.categoria {
-  background-color: #fff;              
-  border: 2px solid #800020;           
-  border-radius: 8px;
-  padding: 1.5rem;
-  margin-bottom: 1.5rem;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.15);
-}
-
-.categoria h3 {
-  color: #800020;                      
-  margin-top: 0;
-  margin-bottom: 0.5rem;
-  font-size: 1.3rem;
-}
-
-.categoria p {
-  color: #111;                         
-  line-height: 1.6;
 }
 
 footer {
@@ -135,12 +95,10 @@ footer {
   flex: 1;
   
 }
-
 .tabela-vinhos table {
   border-collapse: collapse;
   width: 100%;
 }
-
 .tabela-vinhos th, 
 .tabela-vinhos td {
   border: 1px solid #b32e2e;
@@ -153,23 +111,7 @@ footer {
   color: #fff;
 }
 
-.img{
+.video{
   width: 300px;
   height: 200px;
-}
-
-.link-container {
-  text-decoration: none;
-  color: inherit;
-}
-
-.carrossel td {
-  text-align: center;
-  vertical-align: top;
-}
-.carrossel img {
-  display: block;
-  height: auto;
-  width: 120px;
-  border-radius: 8px;
 }
