--- a/css/vinhos.css
+++ b/css/vinhos.css
@@ -45,6 +45,11 @@ main {
 }
 
 
+.img {
+  width: 200px;
+  height: 200px;
+  
+}
 
 
 .texto-destaque {
@@ -69,6 +74,26 @@ main {
   font-family: 'Calibri', serif;
 }
 
+.categoria {
+  background-color: #fff;              
+  border: 2px solid #800020;           
+  border-radius: 8px;
+  padding: 1.5rem;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.15);
+}
+
+.categoria h3 {
+  color: #800020;                      
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-size: 1.3rem;
+}
+
+.categoria p {
+  color: #111;                         
+  line-height: 1.6;
+}
 
 
 
