--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ nav {
 
 nav a {
   color: #000000;
-  text-decoration: none;/*espaco entre os itens*/
+  text-decoration: none;
   margin: 0 10px;
 }
 
